2007-04-17  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/community.R (leading.eigenvector.community)
	(leading.eigenvector.community.step) 
	(as.dendrogram.igraph.eigenc) : added
	* interfaces/R/src/rinterface.c (R_igraph_leading_eigenvector_community)
	(R_igraph_leading_eigenvector_community_step) : added

	* interfaces/R/igraph/R/community.R (community.cut)
	(edge.type.matrix) : removed

2007-04-12  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/tkplot.R (.tkplot.update.edge) :
	bug corrected, edge endpoints were calculated with wrong vertex size

2007-04-07  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/community.R (modularity) : rewritten to call
	C function
	* interfaces/R/src/rinterface.c (R_igraph_modularity) : added

2007-04-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/community.R (community.to.membership) : added
	* interfaces/R/src/rinterface.c (R_igraph_community_to_membership) : 
	added

	* interfaces/R/igraph/community.R (fastgreedy.community) : added
	* interfaces/R/src/rinterface.c (R_igraph_community_fastgreedy) : added

2007-04-04  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/community.R (.memberDend)
	(as.dendrogram.igraph.walktrap, as.dendrogram.igraph.ebc) : added

	* interfaces/R/igraph/community.R (edge.betweenness.community)
	(walktrap.community) : 'labels' argument added
	
	* interfaces/R/igraph/R/community.R (edge.betweenness.community) : 
	'merges' and 'bridges' options added
	(edge.betweenness.community.merges) : added
	* interfaces/R/src/rinterface.c 
	(R_igraph_community_edge_betweenness) : 'merges' and 'bridges' 
	arguments added
	(R_igraph_community_eb_get_merges) : added

2007-04-03  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/src/rinterface.c (R_igraph_spinglass_community)
	(R_igraph_spinglass_my_community, R_igraph_walktrap_community) : updated
	after renames
	
	* interfaces/R/igraph/R/community.R 