@@ -1,3 +1,9 @@
+2007-04-18  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/revolver.R (evolver.d) : error argument added
+	* interfaces/R/src/rinterface.c (R_igraph_evolver_d) : error calculation
+	added
+
 2007-04-17  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/community.R (leading.eigenvector.community)
